<resources>
    <string name="address">Address</string>
    <string name="app_name">EeVeeSG</string>
    <string name="back">BACK</string>
    <string name="battery_level_header">Battery Level:</string>
    <string name="battery_level">Battery Level</string>
    <string name="bluetooth">Bluetooth:</string>
    <string name="can_add_ev">Your Electric Vehicle Can Be Synchronised To This Application</string>
    <string name="cancel">Cancel</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="claim">Claim</string>
    <string name="connect">Connect</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_claim_toast">Confirm Claim?</string>
    <string name="contact">Contact</string>
    <string name="dash">-</string>
    <string name="dash_percent">- %</string>
    <string name="edit">edit</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_name">Edit Name</string>
    <string name="email">Email</string>
    <string name="email_example">email@email.com</string>
    <string name="electric_vehicle">Electric Vehicle</string>
    <string name="estimated_charge">Estimated Charge: </string>
    <string name="ev_car">EV Car</string>
    <string name="ev_colour">EV Colour</string>
    <string name="ev_model">EV Model</string>
    <string name="exit_toast">Pressing back again will exit the app</string>
    <string name="fnb">Food &amp; Beverages</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="input_ev">Input EV Details</string>
    <string name="keep_me_logged_in">Keep Me Logged In</string>
    <string name="link_ev">Link EV</string>
    <string name="login">Login</string>
    <string name="logout_toast">Pressing back again will logout</string>
    <string name="logout">Logout</string>
    <string name="manual_input">Manual Input:</string>
    <string name="map_key" translatable="false">AIzaSyB4jNfDzwogpxS5Q3lZKNdVlGzA_ipiOCQ</string>
    <string name="member_code">Member Code</string>
    <string name="member_desc">Scan your Member QR code to start earning points!</string>
    <string name="model">Model:</string>
    <string name="name">Name</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="no_contact">No Contact</string>
    <string name="no_ev">No EV linked</string>
    <string name="no_search_result">No search results</string>
    <string name="not_enough_points">Not enough points!</string>
    <string name="obscure">********</string>
    <string name="old_password">Old Password</string>
    <string name="password">Password</string>
    <string name="pd_address">Address:</string>
    <string name="pd_contact">Contact:</string>
    <string name="pd_email">Email:</string>
    <string name="pd_name">Name:</string>
    <string name="pd_password">Password:</string>
    <string name="personal_desc">View and update your personal details</string>
    <string name="personal_details">Personal Details</string>
    <string name="profile_header">Personal Profile</string>
    <string name="reconnect">Reconnect</string>
    <string name="register">Register</string>
    <string name="relink_ev">Relink EV</string>
    <string name="reset_password">Reset Password</string>
    <string name="route_to">Route</string>
    <string name="save">Save</string>
    <string name="scan_voucher">Scan To Claim Vouchers</string>
    <string name="select_other_destination">Please select a nearby EV Charging Station</string>
    <string name="synchronisation">Synchronisation:</string>
    <string name="title_activity_search_location">SearchLocation</string>
    <string name="unavailable">Unavailable</string>
    <string name="qr_description">Scan to Earn Rewards</string>
    <string name="qr_info">QR ID</string>
    <string name="points_balance">Points Balance:</string>
    <string name="view_vouchers">View Vouchers</string>
    <string name="view_card">View Card</string>
    <string name="voucher_example">$10 OFF Charging Station</string>
    <string name="voucher_header">Vouchers</string>
    <string name="voucher_qr">Voucher QR Code</string>
    <string name="warning_toast">Once you leave this page the QR code will disappear!</string>
    <string name="chargingstations">Charging Stations</string>
    <string name="ev_rentals">EV Car Rentals</string>
    <string name="discounts">Discounts</string>
    <string name="retail">Retail</string>
    <string name="view_discounts">View Discounts</string>
    <string name="title_activity_voucher_qr">VoucherQR</string>
    <string name="points_example">200 Points</string>
    <string name="form_name">LEXO</string>
    <string name="title">Service Form</string>
    <string name="map_region">Map Region Dropdown</string>
    <string-array name="maparea">
        <item>North</item>
        <item>South</item>
        <item>East</item>
        <item>West</item>
    </string-array>

    <string-array name="serviceitemname">
        <item>BabySitter</item>
        <item>Chef</item>
        <item>Painter</item>
        <item>Busker</item>
    </string-array>

    <string-array name="svcarea">
        <item>West</item>
        <item>North</item>
        <item>North</item>
        <item>East</item>
    </string-array>

    <string-array name="svcrating">
        <item>3</item>
        <item>4</item>
        <item>2</item>
        <item>5</item>
    </string-array>

    <string-array name="svcdatetime">
        <item>050522 1927</item>
        <item>040722 1800</item>
        <item>010822 1700</item>
        <item>090922 1700</item>
    </string-array>

    <string-array name="svcprovider">
        <item>Armand</item>
        <item>Harvey</item>
        <item>Ray</item>
        <item>Carrot</item>
    </string-array>



</resources>