<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525">

    <androidx.cardview.widget.CardView
        android:id="@+id/link_ev_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#035706">

            <TextView
                android:id="@+id/input_ev_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/input_ev"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/evModelError"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/ev_model"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerEVModel"
        app:layout_constraintEnd_toEndOf="@+id/spinnerEVModel"
        app:layout_constraintStart_toStartOf="@+id/spinnerEVModel"
        app:layout_constraintTop_toTopOf="@+id/spinnerEVModel" />

    <Spinner
        android:id="@+id/spinnerEVModel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_ev_header" />

    <EditText
        android:id="@+id/evColourError"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/ev_colour"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerEVColour"
        app:layout_constraintEnd_toEndOf="@+id/spinnerEVColour"
        app:layout_constraintStart_toStartOf="@+id/spinnerEVColour"
        app:layout_constraintTop_toTopOf="@+id/spinnerEVColour" />

    <Spinner
        android:id="@+id/spinnerEVColour"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/spinnerEVModel"
        app:layout_constraintStart_toStartOf="@+id/spinnerEVModel"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEVModel" />

    <EditText
        android:id="@+id/evBatteryLevel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/battery_level"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/evColourError"
        app:layout_constraintStart_toStartOf="@+id/evColourError"
        app:layout_constraintTop_toBottomOf="@+id/evColourError" />

    <Button
        android:id="@+id/link_ev_save"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#0ED689"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/evBatteryLevel"
        app:layout_constraintTop_toBottomOf="@+id/evBatteryLevel" />

    <Button
        android:id="@+id/link_ev_cancel"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#DF4D4D"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/evBatteryLevel"
        app:layout_constraintTop_toBottomOf="@+id/evBatteryLevel" />

    <ProgressBar
        android:id="@+id/progressBarEV"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>